# dis-code-or-no-code

./: README.md  create_zip.py  excel_instructions.md  pyproject.toml  python.ipynb
infra/: .gitignore  README.md  create_inventory.py  main.tf  overrides.json  playbook.yaml  run_playbook.py
slides/: .gitignore  _quarto.yml  custom.scss  fonts.css  slides.html  slides.qmd  style.css  theme.scss
utils/: .gitignore  README.md  create_csvs.py  funcs.py
